restructured and added block function

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,12 +4,17 @@ SET(CMAKE_CXX_FLAGS "-fopenmp")
 SET(CMAKE_CXX_FLAGS_RELEASE "-O3")
 SET(CMAKE_CXX_FLAGS_DEBUG "-O0 -g3")
 
+include_directories (include)
+
+add_library( Gadget SHARED
+    src/GadgetFile.cpp
+)
 
 add_executable( gadget
-	GadgetFile.cpp
-	GadgetFile.hpp
-	Octree.hpp
 	main.cpp
 )
+add_dependencies(gadget Gadget) 
+
+target_link_libraries (gadget Gadget) 
 
 INSTALL(TARGETS gadget RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
