--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,20 +6,21 @@ SET(CMAKE_CXX_FLAGS "-fopenmp ${CMAKE_CXX_FLAGS}")
 
 include_directories (include)
 
-add_library( Gadget SHARED
+add_library( gadget-lib SHARED
     src/GadgetFile.cpp
 )
+SET_TARGET_PROPERTIES(gadget-lib PROPERTIES OUTPUT_NAME "Gadget")
 
-add_executable( gadget
+add_executable( gadget-tool
 	main
 	arguments
 	paged_grid
 )
-add_dependencies(gadget Gadget) 
+SET_TARGET_PROPERTIES(gadget-tool PROPERTIES OUTPUT_NAME "gadget")
+add_dependencies(gadget-tool gadget-lib) 
+target_link_libraries (gadget-tool gadget-lib) 
 
-target_link_libraries (gadget Gadget) 
-
-INSTALL(TARGETS gadget RUNTIME DESTINATION bin)
-INSTALL(TARGETS Gadget LIBRARY DESTINATION lib)
+INSTALL(TARGETS gadget-tool RUNTIME DESTINATION bin)
+INSTALL(TARGETS gadget-lib DESTINATION lib)
 INSTALL(DIRECTORY include/ DESTINATION include
           FILES_MATCHING PATTERN "*.hpp")
