added SPH tool, renamed index3_t to Index3

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,7 @@ add_executable( gadget-tool
 	tool/bfieldtest
 	tool/paged_grid
 	tool/mass
+	tool/sph
 )
 SET_TARGET_PROPERTIES(gadget-tool PROPERTIES OUTPUT_NAME "gadget")
 add_dependencies(gadget-tool gadget-lib) 
