include fastlz and transpose

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,8 @@ include_directories (include)
 add_library( gadget-lib STATIC
     src/GadgetFile.cpp
     src/MagneticField.cpp
+    src/transpose.c
+    src/fastlz.c
 )
 SET_TARGET_PROPERTIES(gadget-lib PROPERTIES OUTPUT_NAME "Gadget")
 
