--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,9 @@ ENABLE_TESTING()
 
 add_executable(pg_test test/pg_test.cpp)
 add_executable(mf_test test/mf_test.cpp)
+add_executable(sph_grid_test test/sph_grid_test.cpp)
 target_link_libraries(mf_test gadget-lib)
-ADD_TEST(pg pg_test)
+target_link_libraries(sph_grid_test gadget-lib)
 ADD_TEST(mf mf_test)
+ADD_TEST(pg pg_test)
+ADD_TEST(sph_grid sph_grid_test)
