allow local install

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,9 +32,16 @@ INSTALL(TARGETS gadget-tool RUNTIME DESTINATION bin)
 INSTALL(TARGETS gadget-lib DESTINATION lib)
 INSTALL(DIRECTORY include/ DESTINATION include
           FILES_MATCHING PATTERN "*.hpp")
-if(UNIX)          
-    configure_file(${CMAKE_SOURCE_DIR}/gadget-config.in ${CMAKE_CURRENT_BINARY_DIR}/gadget-config @ONLY)
-    INSTALL(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/gadget-config DESTINATION bin PERMISSIONS)
+if(UNIX)
+    SET(GADGET_PREFIX ${CMAKE_INSTALL_PREFIX})
+    SET(GADGET_LIBRARY ${CMAKE_INSTALL_PREFIX}/lib/libGadget.a)
+    configure_file(${CMAKE_SOURCE_DIR}/gadget-config.in ${CMAKE_CURRENT_BINARY_DIR}/gadget-config.system @ONLY)
+    INSTALL(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/gadget-config.system DESTINATION bin PERMISSIONS RENAME gadget-config)
+
+    SET(GADGET_PREFIX ${CMAKE_SOURCE_DIR})
+    SET(GADGET_LIBRARY ${CMAKE_BINARY_DIR}/libGadget.a)
+    file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+    configure_file(${CMAKE_SOURCE_DIR}/gadget-config.in ${CMAKE_BINARY_DIR}/bin/gadget-config @ONLY)
 endif(UNIX)
 
 ENABLE_TESTING()
