add coma_profile test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,21 @@ SET(CMAKE_CXX_FLAGS "-fopenmp ${CMAKE_CXX_FLAGS}")
 #SET(CMAKE_CXX_FLAGS_RELEASE "-O3")
 #SET(CMAKE_CXX_FLAGS_DEBUG "-O0 -g3")
 
+option(ENABLE_ROOT "ENABLE ROOT Output" off)
+if (ENABLE_ROOT)
+	FIND_PROGRAM(ROOT_CONFIG root-config REQUIRED ROOT_CONFIG_PATH) 
+	execute_process(COMMAND ${ROOT_CONFIG} "--cflags" OUTPUT_VARIABLE ROOT_CFLAGS OUTPUT_STRIP_TRAILING_WHITESPACE)
+	message(STATUS "ROOT cflags: ${ROOT_CFLAGS}")
+
+	execute_process(COMMAND ${ROOT_CONFIG} "--libs" OUTPUT_VARIABLE ROOT_LIBS OUTPUT_STRIP_TRAILING_WHITESPACE)
+	message(STATUS "ROOT libs: ${ROOT_LIBS}")
+
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${ROOT_CFLAGS}")
+    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${ROOT_LIBS}")
+
+	add_definitions(-DGADGET_ROOT_ENABLED)
+endif()
+
 include_directories (include)
 
 add_library( gadget-lib STATIC
@@ -49,6 +64,7 @@ ENABLE_TESTING()
 add_executable(pg_test test/pg_test.cpp)
 add_executable(mf_test test/mf_test.cpp)
 add_executable(coma_profile test/coma_profile.cpp)
+target_link_libraries(coma_profile gadget-lib)
 add_executable(sph_grid_test test/sph_grid_test.cpp)
 target_link_libraries(mf_test gadget-lib)
 target_link_libraries(sph_grid_test gadget-lib)
