add database, rename .hpp to .h, cleanup

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,7 @@ add_executable( gadget-tool
 	tool/mass
 	tool/sph
 	tool/sph-dump
+	tool/database
 )
 SET_TARGET_PROPERTIES(gadget-tool PROPERTIES OUTPUT_NAME "gadget")
 add_dependencies(gadget-tool gadget-lib) 
