--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,6 @@
 cmake_minimum_required(VERSION 2.6)
 
-SET(CMAKE_CXX_FLAGS "-fopenmp ${CMAKE_CXX_FLAGS}")
-#SET(CMAKE_CXX_FLAGS_RELEASE "-O3")
-#SET(CMAKE_CXX_FLAGS_DEBUG "-O0 -g3")
+SET(CMAKE_CXX_FLAGS "-fopenmp -D_FILE_OFFSET_BITS=64 ${CMAKE_CXX_FLAGS}")
 
 option(ENABLE_ROOT "ENABLE ROOT Output" off)
 if (ENABLE_ROOT)
