improve python bindings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -99,4 +99,5 @@ if(ENABLE_PYTHON)
 	target_link_libraries(gadget-swig gadget-lib ${PYTHON_LIBRARIES})
 	install(FILES "${CMAKE_CURRENT_BINARY_DIR}/gadget.py" DESTINATION ${PYTHON_SITE_PACKAGES})
 	install(TARGETS gadget-swig LIBRARY DESTINATION ${PYTHON_SITE_PACKAGES})
+	install(FILES python/gadget.i DESTINATION share/gadget)
 endif(ENABLE_PYTHON)
