--- a/.hgignore
+++ b/.hgignore
@@ -1,32 +1,18 @@
 syntax: regexp
 \.a$
-syntax: regexp
 Makefile\.in$
-syntax: regexp
 \.o$
-syntax: regexp
 .*~$
-syntax: regexp
 \.lo$
-syntax: regexp
 Makefile$
-syntax: regexp
 \.la$
-syntax: regexp
 \.deps$
-syntax: regexp
 \.libs$
-syntax: regexp
 ^doc/man$
-syntax: regexp
 ^doc/crpropa_html$
-syntax: regexp
 \.aux$
 syntax: regexp
-\.dvi$
-syntax: regexp
 \.pdf$
-syntax: regexp
 ^\.cproject$
 syntax: regexp
 ^\.project$
@@ -48,3 +34,4 @@ syntax: regexp
 \.ps$
 syntax: regexp
 \.log$
+^doc/_build$
